--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <div class="mx-2">
+                <button class="btn btn-danger">Login</button>
+                <button class="btn btn-danger">Sign Up</button>
+            </div>
         </div>
     </nav>
 
